--- a/pc-apps/image-list/css/index.css
+++ b/pc-apps/image-list/css/index.css
@@ -3,16 +3,15 @@
 }
 #center-image{
     position:fixed;
-    left:50%;
+    left:25%;
     top:20%;
-    width:600px;
-    height:600px;
-    line-height: 600px;
+    width:50%;
+    height:50%;
+    line-height: 100%;
     text-align: center;
     border:1px solid #ddd;
     background:rgba(0,0,0,0.5);
     filter: progid:DXImageTransform.Microsoft.gradient(startcolorstr=#7F000000,endcolorstr=#7F000000);
-    margin-left:-300px;
     z-index:10;
 }
 
