--- a/pc-apps/image-list/css/index.css
+++ b/pc-apps/image-list/css/index.css
@@ -1,5 +1,10 @@
+html,body{
+    height:100%;
+}
+
 .container{
     position: relative;
+    height:100%;
 }
 #center-image{
     position:fixed;
@@ -7,7 +12,6 @@
     top:20%;
     width:50%;
     height:50%;
-    line-height: 100%;
     text-align: center;
     border:1px solid #ddd;
     background:rgba(0,0,0,0.5);
@@ -21,6 +25,12 @@
 }
 .col-my-3{
     width: 25%;
+    float:left;
+    padding:0;
+    margin-bottom: 10px;
+}
+.col-my-5{
+    width: 50%;
     float:left;
     padding:0;
     margin-bottom: 10px;
@@ -65,6 +75,13 @@
     word-wrap: break-word;
     word-break:break-all;
     vertical-align: middle;
+}
+.flex_center{
+    display: flex!important;
+    align-items: center;
+}
+.hidden{
+    display: none!important;
 }
 
 
